# chunky-jpegxl-plugin

./: README.md  Readme.md  build.gradle  settings.gradle
src/main/java/dev/ferrand/chunky/jpegxl/: JpegxlExportFormat.java  JpegxlPlugin.java  JpegxlWriter.java
src/main/resources/: .gitignore  plugin.json
src/native/: CMakeLists.txt  dev_ferrand_chunky_jpegxl_JpegxlWriter.h  jpegxl_writer.cpp
